--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ li {
     margin: 10px 0px 10px 0px;
     margin-left:30px;
 }
-.text-contacts{
+.text-contacts .contacts{
     margin-top: 10px;
     font-size: 18px;
 }
