--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ li {
     margin: 10px 0px 10px 0px;
     
 }
-.text-contacts .contacts{
+.text-contacts{
     margin-top: 10px;
     font-size: 18px;
 }
@@ -96,7 +96,7 @@ li {
     font-size: 16px;
     color: #A8A8A8;
 }
-.block.contacts, .tech-skills , .soft-skills{
+.contacts, .tech-skills , .soft-skills{
     font-size: 22px;
 }
 .white li{
