--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ li {
 .contacts{
     font-weight: 700;
     margin: 10px 0px 30px 0px;
-    
+    font-size: 22px;
 }
 .text-contacts{
     margin-top: 10px;
