--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ li {
     font-size: 16px;
     color: #A8A8A8;
 }
-.contacts, .tech-skills , .soft-skills{
+.tech-skills , .soft-skills{
     font-size: 22px;
 }
 .white li{
