--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 700;}
 
 body{
     background-color: #F5F7FA;
-    font-family: "Montserrat";
+    font-family: 'Montserrat', sans-serif;
 }
 h1{
     margin: 15px 0px 15px 0px;
