--- a/styles.css
+++ b/styles.css
@@ -10,112 +10,193 @@ button{cursor: pointer;}
 button::-moz-focus-inner{padding:0;border:0;}
 a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
-/* ul li{list-style: none;}*/
 img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 700;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
 body{
-    background-color: #F5F7FA;
     font-family: 'Montserrat', sans-serif;
 }
-h1{
-    margin: 15px 0px 15px 0px;
-    font-size: 45px;
-}
-h2{
-    margin: 10px 0px 10px 0px;
-    font-size: 22px;
-}
-h3{
-    margin-bottom: 10px;
-    font-size: 16px;
-}
-h5{
-    font-weight: normal;
-    font-size: 12px;
-    color: #A8A8A8;
+b{
+    font-weight: 700;
+    color: black;
 }
 span{
-    color: red;
-    font-weight: 700;
+    color: #FB6D3A;
 }
-b{
-    color: black; 
+.resume{
+    background-color: #F5F7FA;
+    padding: 40px;
+    overflow:hidden;  
 }
-p{
-    font-size: 18px;
-    font-style: oblique;
-    color: #595959;  
+.container{
+    max-width: 1200px;
+    min-width: 50%;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
-ul{
-    margin: 15px 0px 10px 0px; 
+.flex-body{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:left;
+    overflow: hidden;
 }
-li {
-    margin-left: 15px;
+/* right-column*/
+.right-column{
+    width: 830px;
+   padding-left: 88px;
+   padding-top: 102px;
+   padding-bottom: 100px;
+}
+.header-content{
+    width: 100%;
+    padding-right: 342px;
+    padding-bottom: 40px;
+}
+.text-header-item{
     font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 19px;
+}
+h1{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 55px; 
+    margin-bottom: 24px;
+}
+.text-content{
+    color: #595959 ;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+}
+.projects{
+    padding-bottom: 51px;
+}
+.projects h2{
+    margin-bottom: 8px;
+}
+h2{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 12px;
+}
+.projects ol{
+    padding-left: 15px;
+}
+.link-projects{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
     color: #595959;
 }
-
-.resume{
-    display: flex;
-    margin: 30px;
-    background-color: #fff; 
+.experience{
+    padding-right: 217px;
+    padding-bottom:27px;
 }
-.block {
-    margin: 30px;
+.experience ul{
+    padding-left: 15px;
+    color: #595959;
+    margin-bottom: 16px;
 }
-.left-column{
-    background-color: #1E2939;
-    width: 450px;
-    color: white;
-}
-.my-photo{
-    width: 370%;
-    margin: 40px 0px 40px 0px;
-}
-.contacts{
-    margin: 10px 0px 10px 0px;
-    
-}
-.text-contacts{
-    margin-top: 10px;
-    font-size: 18px;
-}
-.cont-phone, .cont-mail{
-    font-size: 14px;
-    color: red;
-}
-.cont-mail:hover{
-    font-size: 16px;
-    color: #A8A8A8;
-}
-.cont-phone:hover{
-    font-size: 16px;
-    color: #A8A8A8;
-}
-.contacts, .tech-skills , .soft-skills{
-    font-size: 22px;
+h3{
+    font-style: normal;
     font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 11px;
 }
-.white li{
-    color: white;
+h5{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #A8A8A8;
+    margin-bottom: 8px;
 }
-.white li::marker{
-     color: #FB6D3A;
-}
-.right-column{
-    margin: 40px;  
+.university{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 11px;
 }
 .faculty{
-    margin: 10px 0px 10px 0px;
+    font-style: normal;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 12px;
 }
-.my-projects{
-    display: inline-block;
+
+
+/* left-column*/
+.sidebar{
+    width: 370px;
+    padding-top: 40px;
+    background-color: #1E2939;
+    color: white;
+    padding-bottom: 100px;
 }
-.my-projects li:hover{
-    font-size: 16px;
-    color:brown;
-} 
+.my-photo{
+    padding-bottom: 50px;
+    width: 100%;
+}
+.contacts, .tech-skills, .soft-skills{
+    margin-left: 40px;
+    padding-right: 10px;
+}
+.title-sidebar{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    padding-bottom: 8px;
+}
+.text-contacts{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    padding-right: 8px;
+    color: white;
+}
+.cont-phone, .cont-mail{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #A8A8A8;
+    opacity: 0.5;
+}
+.cont-mail{
+    text-decoration-line: underline;
+}
+.cont-mail:hover{
+    text-decoration-line: underline;
+}
+.tech-skills, .soft-skills{
+    padding-top: 47px;
+}
+.skills{
+    color: #CACDD0;
+    margin-left: 15px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+}
+.skills li::marker{
+    color: #FB6D3A;
+}
+.text-soft-skills{
+    color: #FFFFFF;
+}
+/*end left-column*/
